Fixed country names being cut off when you are editing a destinaiton. Makes it usable
#story[585]

--- a/public/stylesheets/detailedDestination.css
+++ b/public/stylesheets/detailedDestination.css
@@ -348,3 +348,8 @@ section#timeline article:nth-child(n) div.inner h2:after {
 .link-image {
     height: 30px;
 }
+
+
+.show {
+    width: 100%;
+}
